new - novos posts

--- a/3-dicas-basicas-para-um-curriculo-diferenciado.html
+++ b/3-dicas-basicas-para-um-curriculo-diferenciado.html
@@ -35,7 +35,7 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="article">
-                    <img src="img/dicas para ter um currículo diferenciado.png" alt="Dicas para ingressar no mercado de trabalho">
+                    <img src="img/dicas para ter um currículo diferenciado.png" alt="Dicas para ter um curriculo diferenciado">
                     <h1 class="title-article">3 DICAS BÁSICAS PARA UM CURRÍCULO DIFERENCIADO</h1>
                     <p>Você já parou parar pensar na importância de se ter um currículo bem elaborado? Se destacar no mercado de trabalho é um dos maiores desafios para os jovens universitários hoje em dia, e um bom currículo, com informações bem dispostas, pode brilhar os olhos de um recrutador e fazer com que você se destaque na multidão.</p>
                     <em>Já leu o nosso artigo com dicas para ingressar no mercado de trabalho? Confira <a href="5-dicas-para-ingressar-no-mercado-de-trabalho.html">aqui</a>!</em>
@@ -49,6 +49,7 @@
                     <p>Ao mentir, você está correndo um sério risco de ter o seu currículo eliminado de cara. Os recrutadores costumam identificar esse tipo de situação com muita facilidade. Se não possui algum requisito específico para aquela vaga, procure mostrar que você pode se capacitar para isso e já corra atrás! Demonstre que está movimentando para alcançar aquela habilidade.</p>
                     <p>Imagine só se você apresenta um currículo em que afirma ter um inglês fluente, sendo que, na verdade, seu inglês é intermediário. Aí você é chamado para uma entrevista presencial e lá você descobre que terá um teste oral de inglês. Não vai pegar nada bem, né? Mas se você deixar claro que seu nível é intermediário e que você permanece estudando para alcançar a fluência, os recrutadores poderão valorizar isso.</p>
                     <p>Inclusive, vale mencionar que os recrutadores checam suas certificações e diplomas, então, fale sempre a verdade!</p>
+                    <img src="img/dicas para ter um currículo diferenciado.jpg" alt="Curriculo diferenciado">
                     <h2>3) ATENTE-SE AO DESIGN E À ESTRUTURA</h2>
                     <p>Hoje em dia é muito fácil pegar um modelo de currículo pronto na internet, há vários disponíveis. Mas, cuidado! É preciso sempre ficar atento ao design e à estrutura desse currículo, para encontrar o modelo ideal que se encaixe no seu perfil. De todo modo, existem detalhes que precisam ser considerados em todos os casos. Em toda estrutura de currículo é importante que conste:</p>
                     <h3>3.1) Dados pessoais: logo no início, com seu nome completo, idade, estado civil, endereço, telefone, e-mail. Só coloque foto 3x4 se for solicitado pela empresa.</h3>
