--- a/3-dicas-para-memorizar-melhor-a-materia-das-provas.html
+++ b/3-dicas-para-memorizar-melhor-a-materia-das-provas.html
@@ -46,6 +46,7 @@
                     <p>Ler a matéria em voz alta pode ser um exercício chato e cansativo para muitas pessoas. No entanto, é fundamental e poderá te ajudar bastante! Isso porque você será capaz de realizar dois métodos de memorização ao mesmo tempo: a leitura e a audição.</p>
                     <p>Além disso, ao realizar essa estratégia, é possível melhorar o foco e a concentração e diminuir a distração, uma vez que ler em voz alta impede, na maioria das vezes, a dispersão dos pensamentos.</p>
                     <p>Aproveite para ler o nosso artigo sobre como focar melhor nos estudos <a href="#">clicando aqui.</a></p>
+                    <img src="img/dicas para memorização.jpg" alt="Dicas para memorização">
                     <h2>2. Dica dia a dia: associe os conteúdos a fatos vivenciados no dia a dia</h2>
                     <p>A melhor forma de aprender um conteúdo é associá-lo a algo que já sabemos, uma vez que o cérebro possui maior facilidade em assimilar as informações quando isso ocorre. Sendo assim, procure sempre aplicar a matéria aprendida em alguma situação vivenciada no seu dia a dia. Isso ajudará você, inclusive, a entender o porquê de estar estudando o referido conteúdo.</p>
                     <h2>3. Dica take a break: descanse...</h2>
