--- a/5-dicas-para-ingressar-no-mercado-de-trabalho.html
+++ b/5-dicas-para-ingressar-no-mercado-de-trabalho.html
@@ -50,6 +50,7 @@
                     <p>É muito importante saber o momento correto de aproveitar as oportunidades, pois o mercado de trabalho está em constante transformação. Algumas atividades que antigamente eram muito valorizadas estão sendo substituídas pela máquina.</p>
                     <p>Em contrapartida, outras tantas profissões atuais não existiam há 10 anos.</p>
                     <p>Portanto, fique ligado na tendência do mercado de trabalho, mas lembre-se sempre de valorizar algumas características, independentemente do trabalho que você exercerá: comunicação, trabalho em equipe e comprometimento.</p>
+                    <img src="img/5 dicas para ingressar no mercado de trabalho (2).jpg" alt="5 dicas para ingressar no mercado de trabalho">
                     <h2>4. Crie um bom currículo</h2>
                     <p>É primordial que a apresentação da sua vida profissional seja bem feita, pois o currículo é a primeira impressão que um recrutador terá de você. Algumas regras básicas de apresentação são: </p>
                     <h3>4.1. Apresente todas as informações pessoais de forma clara e evidente (nome completo, idade, telefone, e-mail, endereço);</h3>
