--- a/as-melhores-estrategias-para-ter-foco-nos-estudos.html
+++ b/as-melhores-estrategias-para-ter-foco-nos-estudos.html
@@ -35,44 +35,34 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="article">
-                    <img src="img/como conciliar trabalho e estudos.jpg" alt="Dicas para conciliar trabalho e estudos">
-                    <h1 class="title-article">DICAS PRÁTICAS PARA CONCILIAR UMA ROTINA DE ESTUDOS E TRABALHO</h1>
-                    <p>Conciliar estudos e trabalho não é exatamente a coisa mais simples de se fazer, correto?
-                            O dia a dia é cansativo e é comum o sentimento de não estar fazendo o suficiente nem no trabalho nem na faculdade, mesmo se esforçando muito. Sendo assim, é essencial contar com um planejamento eficiente.
-                    </p>
-                    <p>Confira <a href="#">aqui</a> o nosso artigo sobre planejamento de estudos!</p>
-                    <p>Bom, a boa notícia é separamos algumas dicas para deixar a sua rotina um pouco mais fácil! Aqui vão elas:</p>
-                    <h2>1. CONTE COM UMA AJUDINHA DIGITAL</h2>
-                    <p>Você sabia que existem vários aplicativos que podem te ajudar a levar uma vida mais organizada e ainda dar aquela forcinha nos estudos? Selecionamos alguns para você:</p>
-                    <h3>1.1 ATRACKER</h3>
-                    <p>O <a href="http://www.wonderapps.se/ATracker/home.html">ATracker</a> é um aplicativo que vai te ajudar a organizar a sua rotina para as atividades habituais. 
-                            Você tem que estar na faculdade todos os dias? Vai à academia duas vezes por semana? Faxina a casa quantas vezes? Tem que sair para passear com o cachorro? Buscar seu filho(a) na escola? Com o aplicativo, você pode adicionar 05 atividades no modo gratuito e montar a sua rotina do melhor jeito para você! Além disso, ele te dará um relatório em formato de gráfico mostrando quantas horas de atividade você teve e até como seu dia de tarefas foi dividido.
-                    </p>
-                    <h3>1.2 TRELLO</h3>
-                    <p>Você acumulou muitas atividades? Trabalho de faculdade, provas, metas para bater no trabalho? O <a href="https://trello.com/">Trello</a> vai te ajudar a organizar melhor todas essas responsabilidades. Você pode estabelecer prazos para suas atividades, adicionar uma lista de afazeres e até incluir pessoas que dividem a mesma responsabilidade com você! Facilita muito nos trabalhos em grupo da faculdade! 
-                            Organização é o segredo para maior produtividade!
-                    </p>
-                    <h3>1.3 DUOLINGO</h3>
-                    <p>E aquele sonho de aprender inglês ou outra língua para ter uma chance maior de conseguir aquele emprego bacana? Estudando e trabalhando parece que não sobra tempo, mas o <a href="https://pt.duolingo.com/">Duolingo</a> pode te ajudar a estudar uma nova língua no tempinho que sobra! 
-                            Você pode interagir com o aplicativo por um curto período de tempo por dia, 15 minutos, por exemplo, e aos poucos ir melhorando seu nível de conhecimento na língua escolhida! Que tal aprender uma nova língua enquanto volta para casa no ônibus?
-                    </p>
-                    <img src="img/dicas para conciliar trabalho e estudos.jpg" alt="Dicas de estudo">
-                    <h2>2. TENHA MOMENTOS DE LAZER SEM CULPA</h2>
-                    <p>Ter um tempo para descansar é essencial! Tente organizar sua agenda para ter um momento de descanso que sirva para te reabastecer de energia! Estar com as tarefas organizadas e em dia te ajuda a curtir esse momento sem culpa e reiniciar a sua jornada com mais vontade!</p>
-                    <em>Momentos de lazer ajudam, inclusive, na memorização de conteúdos. Confira <a href="3-dicas-para-memorizar-melhor-a-materia-das-provas.html">aqui</a> o nosso artigo sobre!</em>
-                    <h2>3. TRACE SUAS METAS</h2>
-                    <p>Você se lembra qual objetivo de vida te fez encarar essa rotina apertada? Pois é, às vezes a loucura é tanta que até nos esquecemos o que nos impulsionou a encarar tantos desafios! 
-                            Por isso, faça uma lista com todos os motivos que você tem para estar se esforçando tanto e trace objetivos, metas claras para um futuro próximo. Exemplo de objetivos: finalizar o semestre da faculdade com médias acima de 8; iniciar pesquisa para tema de TCC até outubro; pesquisar ao menos 04 bibliografias que possam servir ao meu tema de TCC até novembro. 
-                            Com metas claras e de curto e médio prazo traçadas, você consegue vibrar com cada conquista, além de ver o seu crescimento pessoal de forma mais fácil!
-                    </p>
-                    <h2>4. FIQUE DE OLHO NAS FINANÇAS!</h2>
-                    <p>Como andam as finanças? Você faz um balanço mensal das suas economias? Sabe quanto entra e quanto sai da sua conta? Quanto mais controle você tiver sobre a sua situação financeira, menor a chance de ter o dinheiro como um empecilho para conquistar seus objetivos! 
-                            Mas você deve estar pensando: esse artigo deveria simplificar as coisas e você sugere mais uma tarefa para minha rotina? Pode parecer chato e cansativo, mas eu garanto que ter essa parte da sua vida organizada vai reduzir consideravelmente a energia gasta com problemas. 
-                            Então, vale muito a pena conhecer alternativas que podem te ajudar nesse ponto, desde aplicativos que fazem o trabalho de levantar seus gastos mensais para você até empresas que trabalham com crédito estudantil. O que não vale é perder o foco dos estudos!  
-                    </p>
+                    <img src="img/dicas para foco nos estudos.jpg" alt="Dicas para ter foco nos estudos">
+                    <h1 class="title-article">As melhores estratégias para ter foco nos estudos!</h1>
+                    <p>Quem nunca passou dificuldades no foco dos estudos, né? Na correria do dia a dia somos levados pela procrastinação, as redes sociais não param e é difícil deixar o celular de lado. Mas não se preocupe, isso acontece com os melhores alunos. Por isso, separamos dicas para te ajudar a manter a concentração e foco nos estudos!</p>
+                    <p>Então, vamos lá!</p>
+                    <h2>1. Tenha um objetivo!</h2>
+                    <p>Parece bobo, mas quando não sabemos a direção que queremos seguir fica muito mais difícil avaliar um progresso, e isso é válido para todos os âmbitos de nossas vidas. Por isso, o ideal é você saber aonde deseja chegar, em qual prazo e porque.</p>
+                    <p>Para exemplificar, vamos usar alguém que deseja uma bolsa de estudos fora do país:</p>
+                    <ul>
+                        <li><h3>Objetivo: Aprender espanhol e conteúdo técnico para prova. </h3></li>
+                        <li><h3>Prazo: 1 ano de preparação.</h3></li>
+                        <li><h3>Motivo: Estudo para obter a tão sonhada bolsa de estudos na Espanha, que ajudará na carreira e a conseguir o emprego dos sonhos.</h3></li>
+                    </ul>
+                    <p>Depois de definir suas metas, é preciso refletir sobre a importância disso para você e como isso transformará a sua vida. Por isso, tenha sempre em mente seus objetivos e porquês. </p>
+                    <img src="img/Dicas para foco nos estudos 2.jpg" alt="Dicas para o foco">
+                    <h2>2. Defina um lugar de estudos e planeje-se</h2>
+                    <p>Uma das maiores causas de dispersão durante os estudos está diretamente relacionada ao lugar escolhido para realizar essa atividade. Sendo assim, recomendamos que você escolha um lugar silencioso, confortável e com iluminação boa. Evite lugares como camas, com televisões, ou com outras pessoas.</p>
+                    <p>Feito isso, partimos para o planejamento. Defina em quais momentos você irá estudar. Pense no seu trabalho, em suas refeições e nos horários de lazer para poder fazer o seu planejamento de horário.</p>
+                    <p>Aproveite para ler aqui o nosso post sobre conciliação entre trabalho e estudos e baixe nosso <a href="planejamento-de-estudos-como-tonar-seu-estudo-mais-eficiente.html">Ciclo de Estudos</a>.</p>
+                    <p>Não esqueça de definir no seu planejamento o seu horário de descanso e lazer. Pelo menos uma vez ao dia, utilize o seu tempo para fazer algo que você goste, como assistir séries, jogar video game, fazer atividades físicas, entre outros. </p>
+                    <h2>3. Utilize métodos e ferramentas de estudos ao seu favor</h2>
+                    <p>Hoje em dia, existem diversas ferramentas e métodos  para ajudar as pessoas a serem mais produtivas nos estudos. Portanto, faça proveito disso! </p>
+                    <p>A primeira sugestão é a técnica Pomodoro, que se resume a você estudar durante 1 hora, realizar uma pausa de alguns minutos, voltar, realizar uma pausa novamente, e assim por  diante. Vale ressaltar que, durante os minutos de pausa, é importante você  tomar água, passar um tempo ao ar livre, escutar uma música e descansar a mente.</p>
+                    <p>Outra indicação é aprender táticas de memorização. Você pode encontrar instruções sobre isso no nosso post sobre <a href="3-dicas-para-memorizar-melhor-a-materia-das-provas.html">dicas para memorizar melhor a matéria das provas</a>.</p>
+                    <p>Para você que não consegue deixar o celular de lado, conheça o aplicativo <a href="https://www.forestapp.cc/">Forest App</a>, que ajuda ajuda milhares de usuários a manterem o foco, aumentando sua produtividade. </p>
+                    <p>Funciona assim: Você pode plantar uma semente e essa semente vai crescer gradativamente e se tornar uma árvore. Você determina um tempo para não utilizar o celular e não deverá abrir nenhum aplicativo enquanto aquele tempo pré-definido está em sua contagem regressiva. Sendo assim, se você mexer no celular, sua árvore morre. Ele é um aplicativo gratuito e está disponível para Android e IOS.</p>
                     <p>Gostou das nossas dicas? Fale com a gente pelo formulário abaixo! Adoramos sugestões, tirar dúvidas ou até mesmo bater um papo :)</p>
                 </div>
-            </div> 
+            </div>
             <!-- Card newsletter -->
             <div class="col-xs-12 col-sm-12 col-md-4">
                 <div class="card-interna">
