--- a/como-deixar-de-se-distrair-com-as-redes-sociais.html
+++ b/como-deixar-de-se-distrair-com-as-redes-sociais.html
@@ -35,44 +35,32 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="article">
-                    <img src="img/como conciliar trabalho e estudos.jpg" alt="Dicas para conciliar trabalho e estudos">
-                    <h1 class="title-article">DICAS PRÁTICAS PARA CONCILIAR UMA ROTINA DE ESTUDOS E TRABALHO</h1>
-                    <p>Conciliar estudos e trabalho não é exatamente a coisa mais simples de se fazer, correto?
-                            O dia a dia é cansativo e é comum o sentimento de não estar fazendo o suficiente nem no trabalho nem na faculdade, mesmo se esforçando muito. Sendo assim, é essencial contar com um planejamento eficiente.
-                    </p>
-                    <p>Confira <a href="#">aqui</a> o nosso artigo sobre planejamento de estudos!</p>
-                    <p>Bom, a boa notícia é separamos algumas dicas para deixar a sua rotina um pouco mais fácil! Aqui vão elas:</p>
-                    <h2>1. CONTE COM UMA AJUDINHA DIGITAL</h2>
-                    <p>Você sabia que existem vários aplicativos que podem te ajudar a levar uma vida mais organizada e ainda dar aquela forcinha nos estudos? Selecionamos alguns para você:</p>
-                    <h3>1.1 ATRACKER</h3>
-                    <p>O <a href="http://www.wonderapps.se/ATracker/home.html">ATracker</a> é um aplicativo que vai te ajudar a organizar a sua rotina para as atividades habituais. 
-                            Você tem que estar na faculdade todos os dias? Vai à academia duas vezes por semana? Faxina a casa quantas vezes? Tem que sair para passear com o cachorro? Buscar seu filho(a) na escola? Com o aplicativo, você pode adicionar 05 atividades no modo gratuito e montar a sua rotina do melhor jeito para você! Além disso, ele te dará um relatório em formato de gráfico mostrando quantas horas de atividade você teve e até como seu dia de tarefas foi dividido.
-                    </p>
-                    <h3>1.2 TRELLO</h3>
-                    <p>Você acumulou muitas atividades? Trabalho de faculdade, provas, metas para bater no trabalho? O <a href="https://trello.com/">Trello</a> vai te ajudar a organizar melhor todas essas responsabilidades. Você pode estabelecer prazos para suas atividades, adicionar uma lista de afazeres e até incluir pessoas que dividem a mesma responsabilidade com você! Facilita muito nos trabalhos em grupo da faculdade! 
-                            Organização é o segredo para maior produtividade!
-                    </p>
-                    <h3>1.3 DUOLINGO</h3>
-                    <p>E aquele sonho de aprender inglês ou outra língua para ter uma chance maior de conseguir aquele emprego bacana? Estudando e trabalhando parece que não sobra tempo, mas o <a href="https://pt.duolingo.com/">Duolingo</a> pode te ajudar a estudar uma nova língua no tempinho que sobra! 
-                            Você pode interagir com o aplicativo por um curto período de tempo por dia, 15 minutos, por exemplo, e aos poucos ir melhorando seu nível de conhecimento na língua escolhida! Que tal aprender uma nova língua enquanto volta para casa no ônibus?
-                    </p>
-                    <img src="img/dicas para conciliar trabalho e estudos.jpg" alt="Dicas de estudo">
-                    <h2>2. TENHA MOMENTOS DE LAZER SEM CULPA</h2>
-                    <p>Ter um tempo para descansar é essencial! Tente organizar sua agenda para ter um momento de descanso que sirva para te reabastecer de energia! Estar com as tarefas organizadas e em dia te ajuda a curtir esse momento sem culpa e reiniciar a sua jornada com mais vontade!</p>
-                    <em>Momentos de lazer ajudam, inclusive, na memorização de conteúdos. Confira <a href="3-dicas-para-memorizar-melhor-a-materia-das-provas.html">aqui</a> o nosso artigo sobre!</em>
-                    <h2>3. TRACE SUAS METAS</h2>
-                    <p>Você se lembra qual objetivo de vida te fez encarar essa rotina apertada? Pois é, às vezes a loucura é tanta que até nos esquecemos o que nos impulsionou a encarar tantos desafios! 
-                            Por isso, faça uma lista com todos os motivos que você tem para estar se esforçando tanto e trace objetivos, metas claras para um futuro próximo. Exemplo de objetivos: finalizar o semestre da faculdade com médias acima de 8; iniciar pesquisa para tema de TCC até outubro; pesquisar ao menos 04 bibliografias que possam servir ao meu tema de TCC até novembro. 
-                            Com metas claras e de curto e médio prazo traçadas, você consegue vibrar com cada conquista, além de ver o seu crescimento pessoal de forma mais fácil!
-                    </p>
-                    <h2>4. FIQUE DE OLHO NAS FINANÇAS!</h2>
-                    <p>Como andam as finanças? Você faz um balanço mensal das suas economias? Sabe quanto entra e quanto sai da sua conta? Quanto mais controle você tiver sobre a sua situação financeira, menor a chance de ter o dinheiro como um empecilho para conquistar seus objetivos! 
-                            Mas você deve estar pensando: esse artigo deveria simplificar as coisas e você sugere mais uma tarefa para minha rotina? Pode parecer chato e cansativo, mas eu garanto que ter essa parte da sua vida organizada vai reduzir consideravelmente a energia gasta com problemas. 
-                            Então, vale muito a pena conhecer alternativas que podem te ajudar nesse ponto, desde aplicativos que fazem o trabalho de levantar seus gastos mensais para você até empresas que trabalham com crédito estudantil. O que não vale é perder o foco dos estudos!  
-                    </p>
+                    <img src="img/distração redes sociais.jpg" alt="distração redes sociais">
+                    <h1 class="title-article">Como deixar de se distrair com as redes sociais</h1>
+                    <p>Apesar dos inúmeros benefícios das redes sociais, estar conectado a todo momento pode dificultar a realização de algumas tarefa em nosso dia. Quem nunca passou 20 minutos apenas para dar uma olhadinha no <em>WhatsApp</em>?</p>
+                    <p>Nosso celular se tornou um acessório que nos acompanha em todos os lugares e o número de notificações em nossos aplicativos é cada vez maior. Como lidar com todas essas distrações?</p>
+                    <h2>1. Aprenda a se desconectar</h2>
+                    <p>Que a tecnologia facilita nossa vida todos nós sabemos. Desde conferir uma mensagem a pagar uma conta, podemos contar com nosso celular para inúmeras tarefas diárias. Entretanto, por mais confortável que seja nossa vida hoje com nossos smartphones, a tecnologia nos provoca a vivermos em alerta o tempo todo, deixando de colocarmos nossa atenção no momento presente.</p>
+                    <p>Uma das melhores formas de começar a aprender a se desconectar é separando algumas atividades para fazer longe do celular, por exemplo: uma leitura antes de dormir, passear com seu cachorro, aproveitar momentos em família, etc...</p>
+                    <h2>2. Elimine as fontes de distrações</h2>
+                    <p>Aprenda a colocar o celular no silencioso ou a fechar o navegador quando estiver estudo para que possa se concentrar melhor. Quanto mais dispositivos conectados, mais fácil você se distrair, portanto não facilite!</p>
+                    <img src="img/Como deixar de se distrair com as redes sociais.jpg" alt="Como deixar as redes sociais">
+                    <h2>3. Valorize o contato pessoal</h2>
+                    <p>Valorizar o contato pessoal é uma forma de comunicar que você se importa com a pessoa, afinal na era da tecnologia podemos ficar preguiçosos até para encontrar nossos melhores amigos.</p>
+                    <p>Quando quiser parabenizar um amigo ou familiar, busque fazer pessoalmente sempre que possível. Aposto que você será melhor lembrado fazendo um contato pessoal do que enviando apenas mensagens.</p>
+                    <h2>4. Planeje seu tempo</h2>
+                    <p>As notificações irão chegar a todo momento, não há escapatória. Se você precisar checar cada notificação, dificilmente criará o hábito de se concentrar.</p>
+                    <p>Uma das melhores maneiras de lidar com as notificações é definindo um tempo para verificá-las. Não precisa ser um horário definido, você pode checar a cada 40 minutos por exemplo que já será um enorme avanço, não é mesmo?</p>
+                    <p>Você pode inclusive checar suas redes entre as disciplinas de seu ciclo de estudo. Já conhece a nossa planilha de estudo? Baixe agora mesmo para organizar melhor o seu tempo!</p>
+                    <h2>5. Saia de grupos que não agregam</h2>
+                    <p>Verifique quais grupos realmente agregam o seu estudo e desenvolvimento. Grande parte dos grupos são criados sem um propósito bem definido e acabam sendo um repositório de memes com notificações durante todo o dia.</p>
+                    <p>Qualquer ferramenta pode ser prejudicial se mal usada, portanto defina seus objetivos com cada grupo!</p>
+                    <h2>6. Tenha um caderno de insights</h2>
+                    <p>Alguns estudantes relatam que mudam seu foco para não perder uma ideia, no entanto essa ideia leva a outra e no final há grandes chances de não ter construído nada com estes insights.</p>
+                    <p>Tenha um caderno de insights e anote tudo aquilo que quiser lembrar depois de terminar sua tarefa. Após algum tempo você tenderá a se sentir menos ansiosa(o), pois aprenderá que todos os seus insights estão a salvo em sua caderneta.</p>
                     <p>Gostou das nossas dicas? Fale com a gente pelo formulário abaixo! Adoramos sugestões, tirar dúvidas ou até mesmo bater um papo :)</p>
                 </div>
-            </div> 
+            </div>
             <!-- Card newsletter -->
             <div class="col-xs-12 col-sm-12 col-md-4">
                 <div class="card-interna">
