--- a/dicas-de-como-se-preparar-para-o-enem.html
+++ b/dicas-de-como-se-preparar-para-o-enem.html
@@ -35,44 +35,27 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="article">
-                    <img src="img/como conciliar trabalho e estudos.jpg" alt="Dicas para conciliar trabalho e estudos">
-                    <h1 class="title-article">DICAS PRÁTICAS PARA CONCILIAR UMA ROTINA DE ESTUDOS E TRABALHO</h1>
-                    <p>Conciliar estudos e trabalho não é exatamente a coisa mais simples de se fazer, correto?
-                            O dia a dia é cansativo e é comum o sentimento de não estar fazendo o suficiente nem no trabalho nem na faculdade, mesmo se esforçando muito. Sendo assim, é essencial contar com um planejamento eficiente.
-                    </p>
-                    <p>Confira <a href="#">aqui</a> o nosso artigo sobre planejamento de estudos!</p>
-                    <p>Bom, a boa notícia é separamos algumas dicas para deixar a sua rotina um pouco mais fácil! Aqui vão elas:</p>
-                    <h2>1. CONTE COM UMA AJUDINHA DIGITAL</h2>
-                    <p>Você sabia que existem vários aplicativos que podem te ajudar a levar uma vida mais organizada e ainda dar aquela forcinha nos estudos? Selecionamos alguns para você:</p>
-                    <h3>1.1 ATRACKER</h3>
-                    <p>O <a href="http://www.wonderapps.se/ATracker/home.html">ATracker</a> é um aplicativo que vai te ajudar a organizar a sua rotina para as atividades habituais. 
-                            Você tem que estar na faculdade todos os dias? Vai à academia duas vezes por semana? Faxina a casa quantas vezes? Tem que sair para passear com o cachorro? Buscar seu filho(a) na escola? Com o aplicativo, você pode adicionar 05 atividades no modo gratuito e montar a sua rotina do melhor jeito para você! Além disso, ele te dará um relatório em formato de gráfico mostrando quantas horas de atividade você teve e até como seu dia de tarefas foi dividido.
-                    </p>
-                    <h3>1.2 TRELLO</h3>
-                    <p>Você acumulou muitas atividades? Trabalho de faculdade, provas, metas para bater no trabalho? O <a href="https://trello.com/">Trello</a> vai te ajudar a organizar melhor todas essas responsabilidades. Você pode estabelecer prazos para suas atividades, adicionar uma lista de afazeres e até incluir pessoas que dividem a mesma responsabilidade com você! Facilita muito nos trabalhos em grupo da faculdade! 
-                            Organização é o segredo para maior produtividade!
-                    </p>
-                    <h3>1.3 DUOLINGO</h3>
-                    <p>E aquele sonho de aprender inglês ou outra língua para ter uma chance maior de conseguir aquele emprego bacana? Estudando e trabalhando parece que não sobra tempo, mas o <a href="https://pt.duolingo.com/">Duolingo</a> pode te ajudar a estudar uma nova língua no tempinho que sobra! 
-                            Você pode interagir com o aplicativo por um curto período de tempo por dia, 15 minutos, por exemplo, e aos poucos ir melhorando seu nível de conhecimento na língua escolhida! Que tal aprender uma nova língua enquanto volta para casa no ônibus?
-                    </p>
-                    <img src="img/dicas para conciliar trabalho e estudos.jpg" alt="Dicas de estudo">
-                    <h2>2. TENHA MOMENTOS DE LAZER SEM CULPA</h2>
-                    <p>Ter um tempo para descansar é essencial! Tente organizar sua agenda para ter um momento de descanso que sirva para te reabastecer de energia! Estar com as tarefas organizadas e em dia te ajuda a curtir esse momento sem culpa e reiniciar a sua jornada com mais vontade!</p>
-                    <em>Momentos de lazer ajudam, inclusive, na memorização de conteúdos. Confira <a href="3-dicas-para-memorizar-melhor-a-materia-das-provas.html">aqui</a> o nosso artigo sobre!</em>
-                    <h2>3. TRACE SUAS METAS</h2>
-                    <p>Você se lembra qual objetivo de vida te fez encarar essa rotina apertada? Pois é, às vezes a loucura é tanta que até nos esquecemos o que nos impulsionou a encarar tantos desafios! 
-                            Por isso, faça uma lista com todos os motivos que você tem para estar se esforçando tanto e trace objetivos, metas claras para um futuro próximo. Exemplo de objetivos: finalizar o semestre da faculdade com médias acima de 8; iniciar pesquisa para tema de TCC até outubro; pesquisar ao menos 04 bibliografias que possam servir ao meu tema de TCC até novembro. 
-                            Com metas claras e de curto e médio prazo traçadas, você consegue vibrar com cada conquista, além de ver o seu crescimento pessoal de forma mais fácil!
-                    </p>
-                    <h2>4. FIQUE DE OLHO NAS FINANÇAS!</h2>
-                    <p>Como andam as finanças? Você faz um balanço mensal das suas economias? Sabe quanto entra e quanto sai da sua conta? Quanto mais controle você tiver sobre a sua situação financeira, menor a chance de ter o dinheiro como um empecilho para conquistar seus objetivos! 
-                            Mas você deve estar pensando: esse artigo deveria simplificar as coisas e você sugere mais uma tarefa para minha rotina? Pode parecer chato e cansativo, mas eu garanto que ter essa parte da sua vida organizada vai reduzir consideravelmente a energia gasta com problemas. 
-                            Então, vale muito a pena conhecer alternativas que podem te ajudar nesse ponto, desde aplicativos que fazem o trabalho de levantar seus gastos mensais para você até empresas que trabalham com crédito estudantil. O que não vale é perder o foco dos estudos!  
-                    </p>
+                    <img src="img/ENEM 2019.jpg" alt="Enem 2019">
+                    <h1 class="title-article">Dicas de como se preparar para o ENEM 2019</h1>
+                    <p>O ENEM 2019 está chegando! Estamos a 4 meses da tão esperada prova. O tempo é curto, mas não se preocupe! Nós, do Próximo Semestre, preparamos dicas incríveis para te ajudar rumo a um bom resultado.</p>
+                    <h2>1. Crie hábito de estudo</h2>
+                    <p>Você precisa desenvolver o hábito de estudar; qualquer procrastinação deve ficar para trás. Segundo o livro “O Poder do hábito” de Charles Duhigg, para desenvolver um hábito é necessário seguir três etapas que vamos aplicá-las aqui, aos estudos para o ENEM:</p>
+                    <h3>1.1 Deixa: estímulo que manda o cérebro entrar em modo automático para alguma atividade, indicando qual hábito deve ser iniciado. No nosso caso, vamos pensar em montar um planejamento de estudos para a prova.</h3>
+                    <h3>1.2 Rotina: forma como a deixa será executada. Então, o que precisamos fazer é colocar o planejamento no nosso dia a dia. Para isso é necessário um esforço até que o seu cérebro se acostume com uma nova rotina para que, então, a rotina vire um hábito.</h3>
+                    <h3>1.3 Recompensa: indícios ao cérebro de que vai valer à pena a criação do hábito. O planejamento e a execução de estudos de forma organizada e efetiva têm como possíveis recompensas, aprender novos conteúdos, praticar a redação e arrasar na prova do ENEM 2019.</h3>
+                    <h2>2. Trace estratégias</h2>
+                    <p>Analise o que você fez até aqui para traçar estratégias. Para isso é necessário que você seja honesto (a) consigo mesmo e se pergunte: Estou estudando exatamente como eu queria? Fiz o que planejei? É importante saber em qual estágio você se encontra para continuar sua caminhada de estudos. Considere os seguintes pontos:</p>
+                    <h3>2.1 Disponibilidade de horas de estudo: não adianta falar que você vai estudar 40 horas semanais, se você tem disponível 20 horas. Adeque-se à sua realidade.</h3>
+                    <h3>2.2 Disciplinas a serem estudadas: é importante estabelecer todo o conteúdo que você irá estudar ao longo da semana e, assim, cumprir exatamente com o que foi planejado. Entenda em quais disciplinas você tem maior facilidade e dificuldade, considere esses pontos fortes e fracos no seu planejamento e siga adiante!</h3>
+                    <h3>2.3 Treinamento de redação: estudar temas, técnicas e escrita adequada ao tempo da prova é extremamente importante para uma nota satisfatória na redação do ENEM 2019.</h3>
+                    <h3>2.4 Revisão: faça revisões do conteúdo estudado. Quando chegar o mês de novembro, dificilmente você se lembrará de tudo o que estudou, então faça revisões periódicas. Mas, se você ainda não tiver começado seus estudos, comece do zero e de forma organizada. Para te auxiliar, preparamos um artigo com “3 dicas para memorizar melhor a matéria das provas”. Veja clicando <a href="3-dicas-para-memorizar-melhor-a-materia-das-provas.html">aqui</a>!</h3>
+                    <h3>2.5 Faça provas anteriores: preparar-se para a prova do ENEM requer aprofundamento ao estilo de questões que ela segue. Ao fazer provas anteriores é possível praticar concentração, raciocínio e tempo, fundamental para um bom resultado final.</h3>
+                    <img src="img/ENEM 2019 2 (1).jpg" alt="Enem 2019 meio pagina">
+                    <p>A motivação vem de dentro. Fatores externos podem te incentivar na conquista dos seus sonhos, mas a motivação é intrínseca e você deve se sentir no comando das decisões da sua vida para direcionar aonde quer chegar com estes estudos e, consequentemente, com a sua carreira.</p>
+                    <p>Escolha sua profissão, diga não à procrastinação, dedique-se e acredite no seu potencial. O seu curso superior está nas suas mãos!</p>
                     <p>Gostou das nossas dicas? Fale com a gente pelo formulário abaixo! Adoramos sugestões, tirar dúvidas ou até mesmo bater um papo :)</p>
                 </div>
-            </div> 
+            </div>
             <!-- Card newsletter -->
             <div class="col-xs-12 col-sm-12 col-md-4">
                 <div class="card-interna">
