--- a/index.html
+++ b/index.html
@@ -120,6 +120,62 @@
                             </div>
                         </a> 
                     </div>
+                    <div class="col-md-6 mt-4">
+                        <a href="dicas-de-como-se-preparar-para-o-enem.html" class="link-card">
+                            <div class="card">
+                                <img class="card-img" src="img/ENEM 2019.jpg" alt="Tumblr noticias">
+                                <div class="card-body">
+                                    <h5 class="card-title font-weight-bold">Dicas de como se preparar para o ENEM 2019</h5>
+                                    <p class="card-text">O ENEM 2019 está chegando! Nós, do Próximo Semestre, preparamos dicas incríveis para te ajudar rumo a um bom resultado.</p>
+                                    <span class="font-weight-bold">Letícia Guimarães</span>
+                                    <a href="dicas-de-como-se-preparar-para-o-enem.html" class="more-news">mais</a>
+                                </div>
+                            </div>
+                        </a> 
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 mt-4">
+                        <a href="planejamento-de-estudos-como-tonar-seu-estudo-mais-eficiente.html" class="link-card">
+                            <div class="card">
+                                <img class="card-img" src="img/dicas para planejamento de estudos.jpg" alt="Tumblr noticias">
+                                <div class="card-body">
+                                    <h5 class="card-title font-weight-bold">Planejamento de Estudos: como tornar o seu estudo mais eficiente</h5>
+                                    <p class="card-text">Muitas pessoas alegam que não possuem tempo para estudar, porém o mais importante não é o quanto você estuda, mas como estuda...</p>
+                                    <span class="font-weight-bold">Wagner Boratto</span>
+                                    <a href="planejamento-de-estudos-como-tonar-seu-estudo-mais-eficiente.html" class="more-news">mais</a>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-6 mt-4">
+                        <a href="as-melhores-estrategias-para-ter-foco-nos-estudos.html" class="link-card">
+                            <div class="card">
+                                <img class="card-img" src="img/dicas para foco nos estudos.jpg" alt="Tumblr noticias">
+                                <div class="card-body">
+                                    <h5 class="card-title font-weight-bold">As melhores estratégias para ter foco nos estudos!</h5>
+                                    <p class="card-text">Quem nunca passou dificuldades no foco dos estudos, né? Na correria do dia a dia somos levados pela procrastinação, as redes sociais não param...</p>
+                                    <span class="font-weight-bold">Lorena Dias</span>
+                                    <a href="as-melhores-estrategias-para-ter-foco-nos-estudos.html" class="more-news">mais</a>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 mt-4">
+                        <a href="como-deixar-de-se-distrair-com-as-redes-sociais.html" class="link-card">
+                            <div class="card">
+                                <img class="card-img" src="img/distração redes sociais.jpg" alt="Tumblr noticias">
+                                <div class="card-body">
+                                    <h5 class="card-title font-weight-bold">Como deixar de se distrair com as redes sociais</h5>
+                                    <p class="card-text">Nosso celular se tornou um acessório que nos acompanha em todos os lugares e o número de notificações em nossos aplicativos é cada vez maior....</p>
+                                    <span class="font-weight-bold">Wagner Boratto</span>
+                                    <a href="como-deixar-de-se-distrair-com-as-redes-sociais.html" class="more-news">mais</a>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
