--- a/planejamento-de-estudos-como-tonar-seu-estudo-mais-eficiente.html
+++ b/planejamento-de-estudos-como-tonar-seu-estudo-mais-eficiente.html
@@ -35,44 +35,56 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="article">
-                    <img src="img/como conciliar trabalho e estudos.jpg" alt="Dicas para conciliar trabalho e estudos">
-                    <h1 class="title-article">DICAS PRÁTICAS PARA CONCILIAR UMA ROTINA DE ESTUDOS E TRABALHO</h1>
-                    <p>Conciliar estudos e trabalho não é exatamente a coisa mais simples de se fazer, correto?
-                            O dia a dia é cansativo e é comum o sentimento de não estar fazendo o suficiente nem no trabalho nem na faculdade, mesmo se esforçando muito. Sendo assim, é essencial contar com um planejamento eficiente.
+                    <img src="img/dicas para planejamento de estudos.jpg" alt="dicas para planejamento de estudos">
+                    <h1 class="title-article">Planejamento de Estudos: como tornar o seu estudo mais eficiente</h1>
+                    <p>Quanto tempo eu devo estudar? Como fazer o meu horário de estudo? Essas são dúvidas frequentes entre os estudantes e que podem deixá-los ansiosos e perdidos para estudar.</p>
+                    <p>Muitas pessoas alegam que não possuem tempo para estudar, porém o mais importante não é o quanto você estuda, mas como estuda. Gerenciamento do tempo é uma habilidade que qualquer um pode aprender e pode ser o que falta para você evoluir em seus estudos.</p>
+                    <h2>1. Seja flexível</h2>
+                    <p>A maioria das pessoas começam a planejar os seus estudos criando um quadro de horários relacionando dias e horários a conteúdos específicos. Este tipo de cronograma é pouco flexível, sendo que, se os horários do dia anterior não forem cumpridos, comprometerá todo o planejamento semanal.</p>
+                    <p>Um outro problema comum é que os horários fixos podem comprometer nossas revisões, passando muito tempo sem rever os assuntos das disciplinas. Para uma boa retenção e memorização das matérias, revisar é essencial.</p>
+                    <p>Confira <a href="3-dicas-para-memorizar-melhor-a-materia-das-provas.html">aqui</a> as nossas dicas para memorizar melhor a matéria para as provas!</p>
+                    <h2>2. Determine um ciclo de estudos</h2>
+                    <p>O ciclo de estudos é um método de planejamento muito eficiente para vestibulandos, concurseiros e estudantes em geral.  Por meio dele, o estudante terá condições de adaptar a sua rotina diária aos estudos.</p>
+                    <p>O seu funcionamento é bem simples. Basicamente, você precisa definir quais disciplinas estudar e quanto tempo de estudo cada disciplina precisa. Isso ajudará você a ter contato com todas as disciplinas e a evitar o erro de deixar alguma matéria de lado.</p>
+                    <p>Abaixo listamos alguns benefícios advindos do ciclo de estudos. Confira:</p>
+                    <ul>
+                        <li>Possibilidade de retomar a disciplina no ponto onde parou;</li>
+                        <li>Rotatividade de disciplinas;</li>
+                        <li>Revisões periódicas, o que é essencial para absorver a matéria;</li>
+                        <li>Estudar quando tiver tempo;</li>
+                        <li>Adaptação do tempo necessário de estudo para cada disciplina.</li>
+                    </ul>
+                    <p>
+                        Demonstramos, ainda, como criar um ciclo de estudos.
+O primeiro passo é fazer uma lista de todas as disciplinas que precisamos estudar. Algumas podem necessitar de uma subdivisão. Por exemplo, a disciplina português pode ser subdividida em literatura, gramática e interpretação textual.
                     </p>
-                    <p>Confira <a href="#">aqui</a> o nosso artigo sobre planejamento de estudos!</p>
-                    <p>Bom, a boa notícia é separamos algumas dicas para deixar a sua rotina um pouco mais fácil! Aqui vão elas:</p>
-                    <h2>1. CONTE COM UMA AJUDINHA DIGITAL</h2>
-                    <p>Você sabia que existem vários aplicativos que podem te ajudar a levar uma vida mais organizada e ainda dar aquela forcinha nos estudos? Selecionamos alguns para você:</p>
-                    <h3>1.1 ATRACKER</h3>
-                    <p>O <a href="http://www.wonderapps.se/ATracker/home.html">ATracker</a> é um aplicativo que vai te ajudar a organizar a sua rotina para as atividades habituais. 
-                            Você tem que estar na faculdade todos os dias? Vai à academia duas vezes por semana? Faxina a casa quantas vezes? Tem que sair para passear com o cachorro? Buscar seu filho(a) na escola? Com o aplicativo, você pode adicionar 05 atividades no modo gratuito e montar a sua rotina do melhor jeito para você! Além disso, ele te dará um relatório em formato de gráfico mostrando quantas horas de atividade você teve e até como seu dia de tarefas foi dividido.
-                    </p>
-                    <h3>1.2 TRELLO</h3>
-                    <p>Você acumulou muitas atividades? Trabalho de faculdade, provas, metas para bater no trabalho? O <a href="https://trello.com/">Trello</a> vai te ajudar a organizar melhor todas essas responsabilidades. Você pode estabelecer prazos para suas atividades, adicionar uma lista de afazeres e até incluir pessoas que dividem a mesma responsabilidade com você! Facilita muito nos trabalhos em grupo da faculdade! 
-                            Organização é o segredo para maior produtividade!
-                    </p>
-                    <h3>1.3 DUOLINGO</h3>
-                    <p>E aquele sonho de aprender inglês ou outra língua para ter uma chance maior de conseguir aquele emprego bacana? Estudando e trabalhando parece que não sobra tempo, mas o <a href="https://pt.duolingo.com/">Duolingo</a> pode te ajudar a estudar uma nova língua no tempinho que sobra! 
-                            Você pode interagir com o aplicativo por um curto período de tempo por dia, 15 minutos, por exemplo, e aos poucos ir melhorando seu nível de conhecimento na língua escolhida! Que tal aprender uma nova língua enquanto volta para casa no ônibus?
-                    </p>
-                    <img src="img/dicas para conciliar trabalho e estudos.jpg" alt="Dicas de estudo">
-                    <h2>2. TENHA MOMENTOS DE LAZER SEM CULPA</h2>
-                    <p>Ter um tempo para descansar é essencial! Tente organizar sua agenda para ter um momento de descanso que sirva para te reabastecer de energia! Estar com as tarefas organizadas e em dia te ajuda a curtir esse momento sem culpa e reiniciar a sua jornada com mais vontade!</p>
-                    <em>Momentos de lazer ajudam, inclusive, na memorização de conteúdos. Confira <a href="3-dicas-para-memorizar-melhor-a-materia-das-provas.html">aqui</a> o nosso artigo sobre!</em>
-                    <h2>3. TRACE SUAS METAS</h2>
-                    <p>Você se lembra qual objetivo de vida te fez encarar essa rotina apertada? Pois é, às vezes a loucura é tanta que até nos esquecemos o que nos impulsionou a encarar tantos desafios! 
-                            Por isso, faça uma lista com todos os motivos que você tem para estar se esforçando tanto e trace objetivos, metas claras para um futuro próximo. Exemplo de objetivos: finalizar o semestre da faculdade com médias acima de 8; iniciar pesquisa para tema de TCC até outubro; pesquisar ao menos 04 bibliografias que possam servir ao meu tema de TCC até novembro. 
-                            Com metas claras e de curto e médio prazo traçadas, você consegue vibrar com cada conquista, além de ver o seu crescimento pessoal de forma mais fácil!
-                    </p>
-                    <h2>4. FIQUE DE OLHO NAS FINANÇAS!</h2>
-                    <p>Como andam as finanças? Você faz um balanço mensal das suas economias? Sabe quanto entra e quanto sai da sua conta? Quanto mais controle você tiver sobre a sua situação financeira, menor a chance de ter o dinheiro como um empecilho para conquistar seus objetivos! 
-                            Mas você deve estar pensando: esse artigo deveria simplificar as coisas e você sugere mais uma tarefa para minha rotina? Pode parecer chato e cansativo, mas eu garanto que ter essa parte da sua vida organizada vai reduzir consideravelmente a energia gasta com problemas. 
-                            Então, vale muito a pena conhecer alternativas que podem te ajudar nesse ponto, desde aplicativos que fazem o trabalho de levantar seus gastos mensais para você até empresas que trabalham com crédito estudantil. O que não vale é perder o foco dos estudos!  
-                    </p>
+                    <p>Após definir a lista, é necessário especificar quanto tempo será dedicado a cada disciplina em cada dia de estudo. Atente-se a algumas disciplinas podem precisar de mais dedicação.</p>
+                    <p>Agora, é hora de definir a ordem das disciplinas, de modo que alternar o conteúdo, como entre exatas e humanas, pode evitar que o ciclo se torne entediante.</p>
+                    <p>Seu ciclo de estudos ficará mais ou menos assim:</p>
+                    <ul>
+                        <li>Gramática – 40 min</li>
+                        <li>Álgebra – 40 min</li>
+                        <li>Sociologia – 40 min</li>
+                        <li>Geometria – 30 min</li>
+                        <li>História – 30 min</li>
+                        <li>...</li>
+                    </ul>
+                    <img src="img/planejamento de estudos.jpg" alt="Planejamento de estudos">
+                    <h2>3. Não esqueça o que aprendeu: faça revisões!</h2>
+                    <p>Você não precisa revisar as matérias somente ao final do ciclo, pois isso pode levar mais de uma semana! Separe alguns minutos pare revisar o que estudou no dia anterior, não precisando durar muito tempo. Uma média interessante é fazer revisões de até 15min do conteúdo já estudado.</p>
+                    <p>Não existe aprendizado sem revisões, então não subestime a importância delas em seu ciclo!</p>
+                    <p>Uma maneira de saber o que revisar exatamente e também saber se o ciclo está funcionando, é fazendo um controle dos seus dias de estudo.</p>
+                    <p>Se na segunda-feira você estudou álgebra e gramática durante 30min, por exemplo, você registrará:</p>
+                    <strong>DIA 01:</strong>
+                    <ul>
+                        <li>Álgebra – 30min</li>
+                        <li>Gramática – 30min</li>
+                        <li>Revisão dia anterior – 15min</li>
+                    </ul>
+                    <p>Não se esqueça de fazer testes com questões! É essencial para se preparar para seus exames, afinal, passa quem acerta mais questões e não quem sabe mais. Por isso, defina metas diárias ou semanais e avalie o seu desempenho nelas!</p>
                     <p>Gostou das nossas dicas? Fale com a gente pelo formulário abaixo! Adoramos sugestões, tirar dúvidas ou até mesmo bater um papo :)</p>
                 </div>
-            </div> 
+            </div>
             <!-- Card newsletter -->
             <div class="col-xs-12 col-sm-12 col-md-4">
                 <div class="card-interna">
